// Vitest Snapshot v1

exports[`GameWithHooks test cases > Render behaviour > Render game field by default 1`] = `
<DocumentFragment>
  <div
    class="css-1ct4owg"
  >
    <header
      class="css-dn2347"
    >
      <h1
        class="css-18kvaxm"
      >
        Minesweeper
      </h1>
      <legend
        class="css-17qz6a2"
      >
        <strong>
          Flag: 
        </strong>
        <code
          class="css-12ap3z0"
        >
          <span
            class="css-udfepp"
          >
            right click
          </span>
           + 
          <span
            class="css-9c23k1"
          />
        </code>
      </legend>
    </header>
    <div
      class="css-1bh93n8"
    >
      <div
        class="css-1gexv9m"
      >
        <div
          class="css-d2q1pa"
        >
          0
        </div>
        <div>
          <select
            class="css-14j5jmv"
          >
            <option
              class="css-zcmdxr"
              value="beginner"
            >
              beginner
            </option>
            <option
              class="css-zcmdxr"
              value="intermediate"
            >
              intermediate
            </option>
            <option
              class="css-zcmdxr"
              value="expert"
            >
              expert
            </option>
          </select>
          <button
            class="css-1bva717"
          >
            🙂
          </button>
        </div>
        <div
          class="css-d2q1pa"
        >
          10
        </div>
      </div>
      <div
        class="css-1ye5yxo"
        size="9"
      >
        <div
          class="css-1tt7j02"
          data-testid="10_0,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_2,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_3,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_4,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_5,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_6,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_7,8"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,2"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,3"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,4"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,5"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,6"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,7"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_8,8"
          role="cell"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GameWithHooks test cases > Render game field by default 1`] = `
<DocumentFragment>
  <div
    class="css-1ct4owg"
  >
    <header
      class="css-dn2347"
    >
      <h1
        class="css-18kvaxm"
      >
        Minesweeper
      </h1>
      <legend
        class="css-17qz6a2"
      >
        <strong>
          Flag: 
        </strong>
        <code
          class="css-12ap3z0"
        >
          <span
            class="css-udfepp"
          >
            right click
          </span>
           + 
          <span
            class="css-9c23k1"
          />
        </code>
      </legend>
    </header>
    <div
      class="css-1bh93n8"
    >
      <div
        class="css-1gexv9m"
      >
        <div
          class="css-d2q1pa"
        >
          0
        </div>
        <div>
          <select
            class="css-14j5jmv"
          >
            <option
              class="css-zcmdxr"
              value="beginner"
            >
              beginner
            </option>
            <option
              class="css-zcmdxr"
              value="intermediate"
            >
              intermediate
            </option>
            <option
              class="css-zcmdxr"
              value="expert"
            >
              expert
            </option>
          </select>
          <button
            class="css-1bva717"
          >
            🙂
          </button>
        </div>
        <div
          class="css-d2q1pa"
        >
          10
        </div>
      </div>
      <div
        class="css-1p4hvro"
      >
        🙁
      </div>
      <div
        class="css-da0epy"
        size="2"
      >
        <div
          class="css-1tt7j02"
          data-testid="10_0,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_0,1"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,0"
          role="cell"
        />
        <div
          class="css-1tt7j02"
          data-testid="10_1,1"
          role="cell"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
